--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,17 @@
 {
-  "presets": ["@babel/preset-env"],
-  "env": {
-    "test": {
-      "sourceMaps": "inline",
-      "plugins": [
-        "istanbul"
-      ]
+  "presets": [[
+    "@babel/preset-env",
+    {
+      "debug": false,
+      "useBuiltIns": "usage",
+      "corejs": 3
     }
-  }
+  ]],
+  "plugins": [
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-transform-spread",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-syntax-dynamic-import"
+  ]
 }
